<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modules.signIn.SignInActivity">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_translucent"
            android:text="@string/button_continue_without_login"
            android:onClick="@{() -> signVM.skipLogin()}"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="96dp"
            app:srcCompat="@mipmap/ic_launcher"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/image_logo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="64dp"
            android:layout_marginStart="24dp"
            android:textSize="24sp"
            android:text="@string/title_log_in"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="12dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_logo">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{signVM.email}"
                android:paddingStart="16dp"
                android:hint="@string/hint_user"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_user">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{signVM.password}"
                android:paddingStart="16dp"
                android:hint="@string/hint_password"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="4dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/text_password"
            app:layout_constraintEnd_toEndOf="@id/text_password"
            android:text="@string/button_forgot_password"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> signVM.onSignInClick()}"
            android:text="@string/button_log_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_forgot_password"/>

        <LinearLayout
            android:id="@+id/linear_spacer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/linear_social_networks">

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2"
                android:background="?android:attr/listDivider" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginHorizontal="2dp"
                android:text="O CONECTATE CON"
                android:layout_weight="3"/>

            <View
                android:id="@+id/divider3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="2"
                android:textAlignment="center"
                android:background="?android:attr/listDivider" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_social_networks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_register">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_weight="1"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_not_registered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_join_us"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_register"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_join_us"
            android:onClick="@{() -> signVM.onRegisterClick()}"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_background_translucent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>
        <variable
            name="signVM"
            type="com.anlh.kt.easypav.modules.signIn.viewModel.SignVM" />
    </data>

</layout>