<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orangeBackground">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:src="@drawable/easy_pav_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_sign_with"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_margin_medium"
            android:fontFamily="@font/sf_ui_display_black"
            android:text="@string/text_sign_in_with"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_logo" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/fb_logo_resized"
            android:text="@string/sign_in_with_facebook"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/button_google_sign_in"
            app:layout_constraintStart_toStartOf="@+id/button_google_sign_in"
            app:layout_constraintTop_toBottomOf="@+id/button_google_sign_in" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_google_sign_in"

            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="@dimen/app_margin_medium"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="@dimen/app_margin_medium"
            android:background="@drawable/google_logo_resized"
            android:text="@string/text_sign_in_with_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_sign_with" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>